modification des taille en pourcent pour rentre le site responsive jusqua la version tablette

--- a/booki/index.html
+++ b/booki/index.html
@@ -72,7 +72,7 @@
         <section id="hebergements">
             <div id="titre-hebergement"><h1> Hébergement à Marseille</h1></div>
             <div id="annonce-hebergement">
-                <a href="#">
+                <a class="lien-card-hebergement"href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo-auberge-la-canebiere">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a class="lien-card-hebergement"href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo-hotel-du-port">
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a class="lien-card-hebergement"href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo-hotel-les-mouettes">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a class="lien-card-hebergement"href="#">
                     <div class="card-hebergement">
                         <div>
                            <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo-hotel-de-la-mer">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a class="lien-card-hebergement"href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo-auberge-le-panier">
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a class="lien-card-hebergement"href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo-hotel-chez-Amima">
@@ -192,7 +192,7 @@
                 <p>Les plus populaires</p>
                 <i class="fa-solid fa-chart-line"></i>
             </div>
-            <a href="#">
+            <a class="lien-card-populaires"href="#">
                 <div class="card-populaires">
                     <div>
                         <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo-hotel-le-soleil-du-matin">
@@ -212,7 +212,7 @@
                     </div>
                 </div> 
             </a>
-            <a href="#">
+            <a class="lien-card-populaires"href="#">
                 <div class="card-populaires">
                     <div>
                         <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo-chambre-hotes-au-coeur-de-leau">
@@ -232,7 +232,7 @@
                     </div>
                 </div> 
             </a>
-            <a href="#">
+            <a class="lien-card-populaires"href="#">
                 <div class="card-populaires">
                     <div>
                         <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo-hotel-bleu-et-blanc">
@@ -259,7 +259,7 @@
             <p>Activités à Marseille</p>
         </div>
         <div id="annonce-activites">
-            <a href="#">
+            <a class="lien-card-activites"href="#">
                 <div class="card-activites">
                     <div>
                         <img src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo-du-vieux-port">
@@ -269,7 +269,7 @@
                     </div>
                 </div> 
             </a>
-            <a href="#">
+            <a class="lien-card-activites"href="#">
                 <div class="card-activites">
                     <div>
                         <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo-fort-de-pomegues">
@@ -279,7 +279,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a class="lien-card-activites"href="#">
                 <div class="card-activites">
                     <div>
                         <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo-parc-national-des-calanques">
@@ -289,7 +289,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a class="lien-card-activites"href="#">
                 <div class="card-activites">
                     <div>
                         <img src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo-de-notre-dame-de-la-garde">
