--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div id="nblogement">
                 <div id="info">
-                    <i class="fa-solid fa-info"></i>
+                    <i class="fa-solid fa-info fa-xs"></i>
                 </div>
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
@@ -192,66 +192,68 @@
                 <p>Les plus populaires</p>
                 <i class="fa-solid fa-chart-line"></i>
             </div>
-            <a class="lien-card-populaires"href="#">
-                <div class="card-populaires">
-                    <div>
-                        <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo-hotel-le-soleil-du-matin">
-                    </div>
-                    <div class="text-etoile">
-                        <div class="card-text">
-                            <h2>Hôtel Le soleil du matin</h2>
-                            <p>Nuit à partir de 128€</p>
+            <div id="annonce-populaires">
+                <a class="lien-card-populaires"href="#">
+                    <div class="card-populaires">
+                        <div>
+                            <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo-hotel-le-soleil-du-matin">
                         </div>
-                        <div class="etoile">
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                        <div class="text-etoile">
+                            <div class="card-text">
+                                <h2>Hôtel Le soleil du matin</h2>
+                                <p>Nuit à partir de 128€</p>
+                            </div>
+                            <div class="etoile">
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                            </div>
                         </div>
-                    </div>
-                </div> 
-            </a>
-            <a class="lien-card-populaires"href="#">
-                <div class="card-populaires">
-                    <div>
-                        <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo-chambre-hotes-au-coeur-de-leau">
-                    </div>
-                    <div class="text-etoile">
-                        <div class="card-text">
-                            <h2>Chambre d"hôtes Au coeur de l'eau</h2>
-                            <p>Nuit à partir de 71€</p>
+                    </div> 
+                </a>
+                <a class="lien-card-populaires"href="#">
+                    <div class="card-populaires">
+                        <div>
+                            <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo-chambre-hotes-au-coeur-de-leau">
                         </div>
-                        <div class="etoile">
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                        <div class="text-etoile">
+                            <div class="card-text">
+                                <h2>Chambre d"hôtes Au coeur de l'eau</h2>
+                                <p>Nuit à partir de 71€</p>
+                            </div>
+                            <div class="etoile">
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                            </div>
                         </div>
-                    </div>
-                </div> 
-            </a>
-            <a class="lien-card-populaires"href="#">
-                <div class="card-populaires">
-                    <div>
-                        <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo-hotel-bleu-et-blanc">
-                    </div>
-                    <div class="text-etoile">
-                        <div class="card-text">
-                            <h2>Hôtel Bleu et Blanc</h2>
-                            <p>Nuit à partir de 68€</p>
+                    </div> 
+                </a>
+                <a class="lien-card-populaires"href="#">
+                    <div class="card-populaires">
+                        <div>
+                            <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo-hotel-bleu-et-blanc">
                         </div>
-                        <div class="etoile">
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                        <div class="text-etoile">
+                            <div class="card-text">
+                                <h2>Hôtel Bleu et Blanc</h2>
+                                <p>Nuit à partir de 68€</p>
+                            </div>
+                            <div class="etoile">
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i class="fa-solid fa-star fa-2xs"></i>
+                                <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                            </div>
                         </div>
-                    </div>
-                </div> 
-            </a>
+                    </div> 
+                </a>
+            </div>
         </section>
     </main>
     <section id="activites">
@@ -300,6 +302,7 @@
                 </div>
             </a>
         </div>
+        
     </section>
     <footer>
         <div class="list1">
